[feat]:Socket 이미지 보내기 테스트